--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -53,3 +53,6 @@ viewCoupons=View Coupons
 viewCouponsMessage=View your coupons for shopping
 startingFrom =Starting from
 activated=Activated
+comeBackLater=Come back later to check if we have something new for buying
+noSmartphonesAvailable=NO SMARTPHONES AVAILABLE
+noComputersAvailable=NO COMPUTERS AVAILABLE
