--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -53,4 +53,7 @@ viewCoupons=Gutscheine anzeigen
 viewCouponsMessage=Sehen Sie sich Ihre Gutscheine zum Einkaufen an
 startingFrom =Ab
 activated=Aktiviert
+comeBackLater=Kommen Sie spater wieder, um zu sehen, ob wir etwas Neues zum Kaufen haben
+noSmartphonesAvailable=KEINE SMARTPHONES VERFUGBAR
+noComputersAvailable=KEINE COMPUTER VERFUGBAR
 
